objects/Bundle__c.object
<CustomObject>
    <description>Created for CR-20140429-5272.Several opportunities will be tied to a single Bundle.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created for CR-20140429-5272. Populated via trigger with the first Opportunities account only if the field is already blank.</description>
        <label>Institution</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bundles</relationshipLabel>
        <relationshipName>Bundles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bundle_Number__c</fullName>
        <description>Created for CR-5272. Will be append in the bundle name.</description>
        <displayFormat>{00000}</displayFormat>
        <label>Bundle Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Bundle_Pursuit_Count__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Created for 5272. Default value equals to 1.</description>
        <label>Bundle Pursuit Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Earliest_Close__c</fullName>
        <description>Created for CR-20140429-5272. Smallest/Earliest Close date on the related opportunities.</description>
        <inlineHelpText>Auto-populated with the smallest/earliest close date on the related opportunities.</inlineHelpText>
        <label>Earliest Close</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Earliest_Stage__c</fullName>
        <description>Created for CR-20140429-5272.</description>
        <inlineHelpText>Auto-populated with the lowest precedence stage value amongs all the related opportunities.</inlineHelpText>
        <label>Earliest Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Growth__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for CR-5272.</description>
        <label>Growth</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Latest_Close__c</fullName>
        <description>Created for CR-20140429-5272. Largest/Latest Close date on the related opportunities.</description>
        <inlineHelpText>Auto-populated with the largest/latest close date on the related opportunities.</inlineHelpText>
        <label>Latest Close</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_Stage__c</fullName>
        <description>Created for CR-20140429-5272.</description>
        <inlineHelpText>Auto-populated with the highest precedence stage value amongs all the related opportunities.</inlineHelpText>
        <label>Latest Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lost_Count__c</fullName>
        <description>Will be populated via trigger with the count of all related opportunities for which the Type of field StageName = Closed/Lost
Created for 5272</description>
        <inlineHelpText>Auto-populated with a count of the related opportunities in a Closed Stage that is considered a “Win”.</inlineHelpText>
        <label>Lost Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lost_Value__c</fullName>
        <description>Will be populate via trigger with sum of the Amount field on all related opportunities for which the Type of field StageName = Closed/Lost
Created for CR-5272.</description>
        <inlineHelpText>Auto-populated with the sum of the “Amount” field on all of the related opportunities that have a Closed Stage that is considered a “Loss”.</inlineHelpText>
        <label>Lost Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lost__c</fullName>
        <description>Created for CR-5272</description>
        <formula>IF (Total_Count__c == 0, 0, Lost_Count__c / Total_Count__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Lost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Margin__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for CR-5272.</description>
        <label>Margin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Open_Count__c</fullName>
        <description>Created for CR-20140429-5272. Count of all related opportunities with Opportunity.Closed = False</description>
        <inlineHelpText>Auto-populated with a count of the related opportunities in a open stage.</inlineHelpText>
        <label>Open Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Value__c</fullName>
        <description>Created for CR-20140429-5272. Sum the Amount field on all related opportunities with Opportunity.Closed = False</description>
        <inlineHelpText>Auto-populated with the sum of the “Amount” field on all of the related opportunities that have open stage.</inlineHelpText>
        <label>Open Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Open__c</fullName>
        <description>Created for CR-5272</description>
        <formula>IF (Total_Count__c == 0, 0, Open_Count__c / Total_Count__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Open</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Population_Health__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for CR-5272</description>
        <label>Population Health</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created for CR-20140429-5272</description>
        <label>Program</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Program__c.Available_to_Bundle__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Bundles</relationshipLabel>
        <relationshipName>Bundles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prorated_Open_Value__c</fullName>
        <description>Sum the Prorated_Proposal_Value__c field on all related opportunities for which the Type of field StageName (according to the field level settings) = Open
Created for 5272</description>
        <label>Prorated Open Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Count__c</fullName>
        <description>Created for CR-20140429-5272. Count all related opportunities</description>
        <inlineHelpText>Auto-populated with a count of all related opportunities.</inlineHelpText>
        <label>Total Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Value__c</fullName>
        <description>Created for CR-20140429-5272. Sum the Amount field on all related opportunities.</description>
        <inlineHelpText>Auto-populated with a sum of the Amount value on all related opportunities.</inlineHelpText>
        <label>Total Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Won_Count__c</fullName>
        <description>Will be populated via count of all related opportunities for which the Type of field StageName = Closed/Won
Created for CR-5272</description>
        <inlineHelpText>Auto-populated with a count of the related opportunities in a Closed Stage that is considered a “Win”.</inlineHelpText>
        <label>Won Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Won_Value__c</fullName>
        <description>Will be populated via sum of the Amount field on all related opportunities for which the Type of field StageName = Closed/Won
Created for 5272</description>
        <inlineHelpText>Auto-populated with the sum of the “Amount” field on all of the related opportunities that have a Closed Stage that is considered a “Win”.</inlineHelpText>
        <label>Won Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Won__c</fullName>
        <description>Created for CR-5272</description>
        <formula>IF (Total_Count__c == 0, 0, Won_Count__c / Total_Count__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Won</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Bundle</label>
    <listViews>
        <fullName>Closed_All</fullName>
        <columns>NAME</columns>
        <columns>Latest_Close__c</columns>
        <columns>Won__c</columns>
        <columns>Lost__c</columns>
        <columns>Won_Value__c</columns>
        <columns>Won_Count__c</columns>
        <columns>Total_Value__c</columns>
        <columns>Total_Count__c</columns>
        <columns>Bundle_Pursuit_Count__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Open__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Closed - All</label>
    </listViews>
    <listViews>
        <fullName>Open_All</fullName>
        <columns>NAME</columns>
        <columns>Earliest_Stage__c</columns>
        <columns>Latest_Stage__c</columns>
        <columns>Open__c</columns>
        <columns>Won__c</columns>
        <columns>Lost__c</columns>
        <columns>Open_Count__c</columns>
        <columns>Open_Value__c</columns>
        <columns>Won_Value__c</columns>
        <columns>Won_Count__c</columns>
        <columns>Total_Value__c</columns>
        <columns>Total_Count__c</columns>
        <columns>Bundle_Pursuit_Count__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Open__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>Open - All</label>
    </listViews>
    <nameField>
        <label>Bundle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bundles</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>